--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@types/node": "^18.0.6",
     "express": "^4.19.2",
     "firebase-admin": "^12.2.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
